# Copy_alias

./: .gitignore  Cargo.toml  CopyAlias.cpp  CopyAlias.vcxproj  CopyAlias.vcxproj.filters  LICENSE  README.md  aviutl2.toml  build_release.ps1
cpp/: CopyAlias.vcxproj
i18n/: English.copyalias.aul2
src/: gui.rs  lib.rs
