[package]
name = "copy_alias"
version = "2.0.0"
edition = "2024"

[dependencies]
aviutl2 = "0.19.0"
arboard = "3.6.1"
eframe = "0.33.2"
rust-ini = "0.21.3"
egui_ltreeview = "0.6.1"

[lib]
name = "CopyAlias"
crate-type = ["cdylib"]

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = "symbols"
